Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132745

borderVisible property not working in Custom3DLabel in QtGraphs.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.8.2, 6.9.0 Beta2, 6.10.0 FF
    • 6.8.0, 6.9
    • Graphs: 3D
    • None
    • Qt Version: 6.8.0
      CPU Arch: x86_64
      OS: Ubuntu 24.04.01 LTS
      Board/Device: Laptop (Lenovo ThinkPad X1)
    • Linux/Wayland, macOS
    • 7d5c6818e (dev), d980eb49f (6.9), 95dbf7091 (6.8)

      Expected behavior:

      When setting borderVisible property of Custom3DLabel to false, label's borders should not be visible.

       

      Actual behavior:

      label borders are visible irrelevant to the setting of borderVisible property.

       

      Test Code:

      // Test Code
      
      import QtQuick
      import QtGraphs
      
      Window {
          id: window
          width: 640
          height: 480
          visible: true
          title: qsTr("Hello World")
      
          Surface3D {
              id: surface3dId
              anchors.fill : parent
      
              axisX {
                  min: 0
                  max: 10
              }
              axisY {
                  min: 0
                  max: 10
              }
              axisZ {
                  min: 0
                  max: 10
              }
      
              Surface3DSeries {
                  id: surace3dSeriesId
              }
      
              customItemList: [
                  Custom3DLabel {
                      id: custom3dLabelId
      
                      text: "Test"
                      backgroundVisible: true
                      backgroundColor: "blue"
                      borderVisible: false
                      textColor: "red"
                      position: Qt.vector3d(5.0, 5.0, 5.0)
                  }
              ]
          }
      }
       

       

       

      Test Results:

      <borderVisible set to false>

       

      <borderVisible set to true>

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tokorpip Tomi Korpipää
            nicolas.jeon Nicolas Jeon
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes