Fix borderVisible property in custom labels

Fixes: QTBUG-132745
Change-Id: I0d67170160a0ba55e0086b5eaa95cda77be794e0
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
(cherry picked from commit 7d5c6818e093defe620a938d61f4d4f6d753acc8)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit d980eb49fc3f6a7eb56c8a2d71b22fe2ae12710b)