src/graphs3d/qml/qquickgraphsitem.cpp
@@ -4812,7 +4812,7 @@ void QQuickGraphsItem::updateCustomData()
         customLabel->setProperty("labelFont", label->font());
         customLabel->setProperty("backgroundVisible", label->isBackgroundVisible());
         customLabel->setProperty("backgroundColor", label->backgroundColor());
-        customLabel->setProperty("borderVisible", label->isBackgroundVisible());
+        customLabel->setProperty("borderVisible", label->isBorderVisible());
         customLabel->setVisible(label->isVisible());
 
         ++labelIterator;
